experimental/ir/testdata/imports/canonical.proto.yaml.stderr.txt
error: file imported multiple times
  --> main.proto:5:1
   |
 4 | import "nested/path.proto";
   | --------------------------- first imported here
 5 | import "nested//path.proto";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: both paths are equivalent to "nested/path.proto"

error: import path must not contain `.`, `..`, or repeated separators
  --> main.proto:5:8
   |
 5 | import "nested//path.proto";
   |        ^^^^^^^^^^^^^^^^^^^^ imported here
   |
  help: canonicalize this path
   |
 5 | - import "nested//path.proto";
 5 | + import "nested/path.proto";

error: import path must not contain `.`, `..`, or repeated separators
  --> main.proto:6:8
   |
 6 | import "./local.proto";
   |        ^^^^^^^^^^^^^^^ imported here
   |
  help: canonicalize this path
   |
 6 | - import "./local.proto";
 6 | + import "local.proto";

error: file imported multiple times
  --> main.proto:7:1
   |
 6 | import "./local.proto";
   | ----------------------- first imported here
 7 | import "local.proto";
   | ^^^^^^^^^^^^^^^^^^^^^
   = help: both paths are equivalent to "local.proto"

error: file imported multiple times
  --> main.proto:8:1
   |
 6 | import "./local.proto";
   | ----------------------- first imported here
 7 | import "local.proto";
 8 | import "fake/../local.proto";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: both paths are equivalent to "local.proto"

error: import path must not contain `.`, `..`, or repeated separators
  --> main.proto:8:8
   |
 8 | import "fake/../local.proto";
   |        ^^^^^^^^^^^^^^^^^^^^^ imported here
   |
  help: canonicalize this path
   |
 8 | - import "fake/../local.proto";
 8 | + import "local.proto";

error: import path must not refer to parent directory
  --> main.proto:9:8
   |
 9 | import "../up.proto";
   |        ^^^^^^^^^^^^^ imported here

encountered 7 errors
